Add animations to links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 
     <!-- css link -->
     <link rel="stylesheet" href="styles.css">
+
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
 
@@ -43,37 +50,60 @@
 
     <!-- content section -->
     <section style="background-image: url('./images/pic1.jpg')">
-        <div class="content"  >
-            <h3>upcoming launch</h3>
-            <h2>eutelsat hotbird 13g mission</h2>
-            <a href="">Watch</a>
+        <div class="content-outer">
+            <div class="content"  >
+                <h3>upcoming launch</h3>
+                <h2>eutelsat hotbird 13g mission</h2>
+                <a href="">Watch</a>
+            </div>
         </div>
     </section>
 
     <section style="background-image: url('./images/pic2.jpg')">
-        <div class="content" >
-            <h3>recent mission</h3>
-            <h2>ussf-44 mission</h2>
-            <a href="">Watch</a>
+        <div class="content-outer">
+            <div class="content" >
+                <h3>recent mission</h3>
+                <h2>ussf-44 mission</h2>
+                <a href="">Watch</a>
+            </div>
         </div>
     </section>
 
     <section style="background-image: url('./images/pic3.jpg')">
-        <div class="content" >
-            <h2>eutelsat hotbird 13g mission</h2>
-            <a href="">learn more</a>
+        <div class="content-outer">
+            <div class="content" >
+                <h2>eutelsat hotbird 13g mission</h2>
+                <a href="">learn more</a>
+            </div>
         </div>
     </section>
 
     <section style="background-image: url('./images/pic1.jpg')">
-        <div class="content" >
-            <h2>starship to land nasa astronauts on the moon</h2>
-            <a href="">learn more</a>
+        <div class="content-outer">
+            <div class="content" >
+                <h2>starship to land nasa astronauts on the moon</h2>
+                <a href="">learn more</a>
+            </div>
         </div>
+        
     </section>
 
 
-    <footer>Footer section</footer>
+
+    <!-- footer section -->
+
+    <footer>
+        <nav>
+            <span>SpaceX &copy; 2023</span>
+            <a href="">twitter</a>
+            <a href="">youtube</a>
+            <a href="">instagaram</a>
+            <a href="">flickr</a>
+            <a href="">linkedin</a>
+            <a href="">privacy policy</a>
+            <a href="">suppliers </a>
+        </nav>
+    </footer>
 
 
 </body>
