add obile responsiveness

--- a/index.html
+++ b/index.html
@@ -38,10 +38,30 @@
         </nav>
         <nav class="rightNav">
             <a href="">Shop</a>
-            <button class="hamburger">|||</button>
+            
         </nav>
 
     </header>
+
+    <div class="shadow">
+
+    </div>
+
+    <button class="hamburger ">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+    <nav class="mobileNav ">
+            <a href="">FALCON 9</a>
+            <a href="">FALCON HEAVY</a>
+            <a href=" ">DRAGON</a>
+            <a href="">STARSHIP</a>
+            <a href="">HUMAN SPACEFLIGHT</a>
+            <a href="">RideShare</a>
+            <a href="">Starlink</a>
+            <a href="">Shop</a>
+    </nav>
 
 
 
@@ -105,6 +125,11 @@
         </nav>
     </footer>
 
+
+
+    <script src="nav.js">
+        
+    </script>
 
 </body>
 </html>
