add button animations and navbar anumations

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
     </header>
 
-    <div class="shadow">
+    <div class="shadow ">
 
     </div>
 
-    <button class="hamburger ">
+    <button class="hamburger" onclick="toggle()">
         <span></span>
         <span></span>
         <span></span>
@@ -74,7 +74,7 @@
             <div class="content"  >
                 <h3>upcoming launch</h3>
                 <h2>eutelsat hotbird 13g mission</h2>
-                <a href="">Watch</a>
+                <a href=""><span>Watch</span></a>
             </div>
         </div>
     </section>
@@ -84,7 +84,7 @@
             <div class="content" >
                 <h3>recent mission</h3>
                 <h2>ussf-44 mission</h2>
-                <a href="">Watch</a>
+                <a href=""><span>Watch</span></a>
             </div>
         </div>
     </section>
@@ -93,16 +93,16 @@
         <div class="content-outer">
             <div class="content" >
                 <h2>eutelsat hotbird 13g mission</h2>
-                <a href="">learn more</a>
+                <a href=""><span>learn more</span></a>
             </div>
         </div>
     </section>
 
-    <section style="background-image: url('./images/pic1.jpg')">
+    <section style="background-image: url('./images/pic4.jpg')">
         <div class="content-outer">
             <div class="content" >
                 <h2>starship to land nasa astronauts on the moon</h2>
-                <a href="">learn more</a>
+                <a href=""><span>learn more</span></a>
             </div>
         </div>
         
@@ -127,9 +127,8 @@
 
 
 
-    <script src="nav.js">
-        
-    </script>
+    <script src="./scripts/nav.js"></script>
+    <script src="./scripts/scroll.js"></script>
 
 </body>
 </html>
